--- a/practice/reactionTime/reactionTime.html
+++ b/practice/reactionTime/reactionTime.html
@@ -3,14 +3,9 @@
 
 <head>
     <title>My experiment</title>
-    <script src="https://jspsych.oss-cn-hangzhou.aliyuncs.com/jspsych-6.1.0/jspsych.js"></script>
-    <script
-        src="https://jspsych.oss-cn-hangzhou.aliyuncs.com/jspsych-6.1.0/plugins/jspsych-html-keyboard-response.js"></script>
-    <script
-        src="https://jspsych.oss-cn-hangzhou.aliyuncs.com/jspsych-6.1.0/plugins/jspsych-image-keyboard-response.js"></script>
-    <link href="https://jspsych.oss-cn-hangzhou.aliyuncs.com/jspsych-6.1.0/css/jspsych.css" rel="stylesheet"
-        type="text/css">
-    </link>
+    <script src="../../jspsych.js"></script>
+    <script src="../../plugins/jspsych-html-keyboard-response.js"></script>
+    <link href="../../css/jspsych.css" rel="stylesheet" type="text/css"></link>
 </head>
 
 <body></body>
