simplify drawing plugin

--- a/humanDecision/humanDecision_AB.html
+++ b/humanDecision/humanDecision_AB.html
@@ -4,9 +4,9 @@
 <head>
     <title>My experiment</title>
     <script src="../jspsych.js"></script>
+    <script src="../plugins/jspsych-drawing.js"></script>
     <script src="../plugins/jspsych-cloze.js"></script>
     <script src="../plugins/jspsych-html-keyboard-response.js"></script>
-    <script src="../plugins/jspsych-psychophysics copy.js"></script>
     <link href="../css/jspsych.css" rel="stylesheet" type="text/css">
     </link>
 </head>
@@ -20,8 +20,7 @@
     /* welcome message */
     var welcome = {
         type: "html-keyboard-response",
-        stimulus: "<p>欢迎参加我们的实验，该实验是为了探索人们的社会决策行为</p>" +
-            "<p>按任意键继续</p>"
+        stimulus: "<p>欢迎参加我们的实验，该实验是为了探索人们的社会决策行为</p><p>按任意键继续</p>"
     };
     timeline.push(welcome);
 
@@ -38,13 +37,9 @@
     timeline.push(instructions);
 
     /* test psychophysics */
-    var gradation = {
+    var drawing = {
         obj_type: 'manual',
-        // show_start_time: 1000,
-        // startX: 0,
-        // startY: 0,
-        drawFunc: function (stimulus, canvas, context) {
-            // stimulus.drawFunc = null;
+        drawFunc: function (canvas, context) {
             // get coordinate of center
             var center_x = Math.ceil(window.innerWidth / 2);
             var center_y = Math.ceil(window.innerHeight / 2);
@@ -60,26 +55,16 @@
             var half_height_left = Math.ceil(Math.random() * 50 + 10);
             var half_height_right = Math.ceil(Math.random() * 50 + 10);
 
-            // stimulus.currentX = Math.ceil(window.innerWidth / 2) - 100;
-            // stimulus.currentY = Math.ceil(window.innerHeight / 2) - 100;
-
-            // const gradLength = 200;
-            // const grad = context.createLinearGradient(0, 0, 0, gradLength);
-            // grad.addColorStop(0, 'rgb(0, 0, 0)'); // black
-            // grad.addColorStop(1, 'rgb(255, 255, 255)'); // white
-            // context.fillStyle = grad;
-
             // draw left rectangle
-            console.log(center_x - dis_left - width_left, center_y - half_height_left, width_left, half_height_left * 2);
             context.fillRect(center_x - dis_left - width_left, center_y - half_height_left, width_left, half_height_left * 2);
             // draw right rectangle
-            // context.rect(center_x + dis_right, center_y - half_height_right, width_right, half_height_right * 2);
+            context.fillRect(center_x + dis_right, center_y - half_height_right, width_right, half_height_right * 2);
             // draw line
         },
     };
     var trial = {
-        type: 'psychophysics',
-        stimuli: [gradation],
+        type: 'drawing',
+        stimuli: [drawing],
         response_type: "mouse",
     };
     timeline.push(trial);
