humanDecision_AB version 1.0

--- a/test.html
+++ b/test.html
@@ -1,54 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>My experiment</title>
-    <script src="../jspsych.js"></script>
-    <script src="../plugins/jspsych-html-keyboard-response.js"></script>
-    <script src="../plugins/jspsych-drawing.js"></script>
-    <link href="../css/jspsych.css" rel="stylesheet" type="text/css">
-    </link>
-</head>
-
-<body></body>
-
-<script>
-    /* create timeline */
-    var timeline = [];
-
-    /* test psychophysics */
-    var gradation = {
-        obj_type: 'manual',
-        drawFunc: function (canvas, context) {
-            var center_x = window.innerWidth / 2;
-            var center_y = window.innerHeight / 2;
-            // generate rectangle's width and height
-            var width = Math.ceil(Math.random() * 100 + 10);
-            var height = Math.ceil(Math.random() * 100 + 10);
-            console.log(center_x - width / 2, center_y - height / 2, width, height);
-            context.rect(center_x - width / 2, center_y - height / 2, width, height);
-            context.fill();
-        },
-    };
-
-    var trial = {
-        type: 'drawing',
-        stimuli: [gradation],
-    };
-    var trial_pro = {
-        timeline: [trial],
-        repetitions: 5,
-    }
-    timeline.push(trial_pro);
-
-    /* start the experiment */
-    jsPsych.init({
-        timeline: timeline,
-        on_finish: function () {
-            jsPsych.data.displayData();
-        }
-    });
-
-</script>
-
-</html>
+<div id="cf_wd_point_6"></div><script type="text/javascript" src="http://cognitivefun.net/wloader/js/6"></script>
