--- a/humanDecision/humanDecision_AB.html
+++ b/humanDecision/humanDecision_AB.html
@@ -4,8 +4,8 @@
 <head>
     <title>My experiment</title>
     <script src="../jspsych.js"></script>
-    <script src="../plugins/jspsych-drawing.js"></script>
     <script src="../plugins/jspsych-cloze.js"></script>
+    <script src="../plugins/jspsych-drawing.js"></script>
     <script src="../plugins/jspsych-html-keyboard-response.js"></script>
     <link href="../css/jspsych.css" rel="stylesheet" type="text/css">
     </link>
@@ -31,53 +31,101 @@
             "<p>屏幕上将显示一个线段，线段两端被大小不同的矩形遮挡。</p>" +
             "<p><strong>请确定线段的中点，越接近真实中点得分越高。</strong></p>" +
             "<p>按任意键继续</p>",
-        /* inter-trial interval  */
-        // post_trial_gap: 2000
+        // post_trial_gap: 1000
     };
     timeline.push(instructions);
 
-    /* test psychophysics */
-    var drawing = {
-        obj_type: 'manual',
+    /* choose line midpoint */
+    // midpoint: record midpoint abscissa of the line
+    // line_length: length of line
+    var midpoint, line_length;
+    var choose = {
+        type: "drawing",
         drawFunc: function (canvas, context) {
             // get coordinate of center
-            var center_x = Math.ceil(window.innerWidth / 2);
-            var center_y = Math.ceil(window.innerHeight / 2);
+            var center_x = window.innerWidth / 2;
+            var center_y = window.innerHeight / 2;
             // generate line length
-            var line_left = Math.ceil(Math.random() * 200 + 20);
-            var line_right = Math.ceil(Math.random() * 200 + 20);
+            var line_left = Math.random() * 300 + 20;
+            var line_right = Math.random() * 300 + 20;
             // pick rectangle position
-            var dis_left = Math.ceil(Math.random() * (line_left - 11) + 10);
-            var dis_right = Math.ceil(Math.random() * (line_right - 11) + 10);
+            var dis_left = Math.random() * (line_left - 11) + 10;
+            var dis_right = Math.random() * (line_right - 11) + 10;
             // generate rectangle's width and half-height
-            var width_left = Math.ceil(Math.random() * 100 + 10);
-            var width_right = Math.ceil(Math.random() * 100 + 10);
-            var half_height_left = Math.ceil(Math.random() * 50 + 10);
-            var half_height_right = Math.ceil(Math.random() * 50 + 10);
+            var width_left = Math.random() * 200 + (line_left - dis_left);
+            var width_right = Math.random() * 200 + (line_right - dis_right);
+            var half_height_left = Math.random() * 100 + 10;
+            var half_height_right = Math.random() * 100 + 10;
+            
+            midpoint = (2 * center_x + line_right - line_left) / 2;
+            line_length = line_left + line_right;
 
             // draw left rectangle
+            context.beginPath();
+            // context.fillStyle = "rgba(0, 0, 200)";       // used for test
             context.fillRect(center_x - dis_left - width_left, center_y - half_height_left, width_left, half_height_left * 2);
+            context.closePath();
             // draw right rectangle
+            context.beginPath();
             context.fillRect(center_x + dis_right, center_y - half_height_right, width_right, half_height_right * 2);
+            context.closePath();
             // draw line
+            context.beginPath();
+            context.moveTo(center_x - line_left, center_y);
+            context.lineTo(center_x + line_right, center_y);
+            context.lineWidth = 2;
+            context.strokeStyle = "black";
+            context.stroke();
+            context.closePath();
+
+            // for test
+            // context.beginPath();
+            // context.moveTo(midpoint, center_y - 10);
+            // context.lineTo(midpoint, center_y + 10);
+            // context.lineWidth = 2;
+            // context.strokeStyle = "black";
+            // context.stroke();
+            // context.closePath();
         },
-    };
-    var trial = {
-        type: 'drawing',
-        stimuli: [drawing],
         response_type: "mouse",
+        on_finish: function(data) {
+            var x = parseFloat(data.click_x);
+            if (x < midpoint - line_length / 2 || x > midpoint + line_length / 2) {
+                data.score = 0;
+            } else {
+                data.score = Math.ceil((1 - 2 * Math.abs(x - midpoint) / line_length) * 100);
+            }
+        }
     };
-    timeline.push(trial);
+
+    /* display score */
+    var grade = {
+        type: "html-keyboard-response",
+        stimulus: function () {
+            return "<p>你的任务得分为：</p><strong>" + jsPsych.data.get().last(1).values()[0].score + "</strong>" + " 分 (0-100)";
+        }
+    }
 
     /* bribe the judge */
-    var offer_point = {
-        type: 'cloze',
-        text: '你愿意付出多少点数给法官：%%(0-10)',
+    var bribe = {
+        type: "cloze",
+        text: "你愿意付出多少点数给法官：%% (0-10)",
         // check_answers: true,
-        // button_text: 'Next',
         // mistake_fn: function () { alert("Wrong answer. Please check again.") }
+        on_finish: function(data) {
+            if (data.answers == "") {
+                data.bribe = 0;
+            } else {
+                data.bribe = parseInt(data.answers);
+            }
+        }
     };
-    timeline.push(offer_point);
+
+    var trial_pro = {
+        timeline: [choose, grade, bribe],
+        repetitions: 2,
+    };
+    timeline.push(trial_pro);
 
     /* start the experiment */
     jsPsych.init({
