--- a/humanDecision/humanDecision_C.html
+++ b/humanDecision/humanDecision_C.html
@@ -3,10 +3,10 @@
 
 <head>
     <title>My experiment</title>
-    <script src="../jspsych.js"></script>
-    <script src="../plugins/jspsych-cloze.js"></script>
-    <script src="../plugins/jspsych-html-keyboard-response.js"></script>
-    <script src="../plugins/jspsych-psychophysics copy.js"></script>
+    <script src="../resources/jspsych.js"></script>
+    <script src="../resources/jspsych-cloze.js"></script>
+    <script src="../resources/jspsych-html-keyboard-response.js"></script>
+    <script src="../resources/jspsych-psychophysics copy.js"></script>
     <link href="../css/jspsych.css" rel="stylesheet" type="text/css">
     </link>
 </head>
