--- a/practice/helloWorld/hello world.html
+++ b/practice/helloWorld/hello world.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>My experiment</title>
-        <script src="../../jspsych.js"></script>
-        <script src="../../plugins/jspsych-html-keyboard-response.js"></script>
+        <script src="../../resources/jspsych.js"></script>
+        <script src="../../resources/jspsych-html-keyboard-response.js"></script>
         <link href="../../css/jspsych.css" rel="stylesheet" type="text/css"></link>
     </head>
     <body></body>
