--- a/practice/reactionTime/reactionTime.html
+++ b/practice/reactionTime/reactionTime.html
@@ -3,8 +3,9 @@
 
 <head>
     <title>My experiment</title>
-    <script src="../../jspsych.js"></script>
-    <script src="../../plugins/jspsych-html-keyboard-response.js"></script>
+    <script src="../../resources/jspsych.js"></script>
+    <script src="../../resources/jspsych-image-keyboard-response.js"></script>
+    <script src="../../resources/jspsych-html-keyboard-response.js"></script>
     <link href="../../css/jspsych.css" rel="stylesheet" type="text/css"></link>
 </head>
 
