--- a/humanDecision/humanDecision_AB.html
+++ b/humanDecision/humanDecision_AB.html
@@ -189,12 +189,24 @@
     var finishTip = {
         type: "html-keyboard-response",
         stimulus: function () {
-            return "<p>试验结束，感谢您的参与。</p>" +
-                "<p>根据您的表现您可额外获得 "+ Math.ceil(5 * sum_point / (100 * 10)) + " 元行为实验奖金。</p>" +
-                "<p>您的完成码为：" + sum_point + "，请将它填写在后续调查问卷的完成码处。</p>";
+            return "<p>根据您的表现您可额外获得 "+ Math.ceil(5 * sum_point / (100 * 10)) + " 元行为实验奖金。</p>" +
+                "<p style='font-size:.8rem;font-style:italic'>按任意键继续</p>";
+        },
+        on_finish: function () {
+            saveData(serial_num + "-" + (new Date()).getTime().toString() + "-" + sum_point, jsPsych.data.get().json());
         }
     };
     timeline.push(finishTip);
+
+    var end = {
+        type: "html-keyboard-response",
+        stimulus: function () {
+            return "<p>试验结束，感谢您的参与。</p>" +
+                "<p>您的完成码为：" + sum_point + "，请将它填写在后续调查问卷的完成码处。</p>" +
+                "<p style='font-size:.8rem;font-style:italic'>按任意键结束，页面白屏后再关闭网页</p>";
+        }
+    };
+    timeline.push(end);
 
     // save data to local
     function saveData(name, data) {
@@ -210,7 +222,7 @@
         on_finish: function () {
             // jsPsych.data.displayData();
             // save data
-            saveData(serial_num + "-" + (new Date()).getTime().toString() + sum_point, jsPsych.data.get().json());
+            // saveData(serial_num + "-" + (new Date()).getTime().toString() + sum_point, jsPsych.data.get().json());
         }
     });
 </script>
